[gd_scene load_steps=10 format=2]

[ext_resource path="res://Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Default Classes/VisibilityOptimisation.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Collision Detection/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sound/SFX/Creatures/Squeaky/monster_17.ogg" type="AudioStream" id=5]
[ext_resource path="res://Characters/Collision Detection/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Characters/Collision Detection/ZoneDetection.tscn" type="PackedScene" id=7]
[ext_resource path="res://Characters/Enemies/EnemyStateMachine.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Spawn"

[node name="Enemy" instance=ExtResource( 1 )]
collision_layer = 8
script = ExtResource( 2 )
PLAYER_DISTANCE = 40

[node name="VisibilityOptimisation" parent="." index="0" instance=ExtResource( 3 )]

[node name="FiniteStateMachine" parent="Traits" index="0"]
script = ExtResource( 8 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Traits" index="1"]
target_desired_distance = 15.0
radius = 60.0
neighbor_dist = 200.0
time_horizon = 100.0

[node name="Stats" parent="Traits" index="2"]
MAXHEALTH = 50

[node name="AnimationPlayer" parent="." index="2"]
anims/Spawn = SubResource( 1 )

[node name="SoftCollision" parent="Collision" index="0" instance=ExtResource( 4 )]

[node name="Hurtbox" parent="Collision" index="1"]
collision_layer = 16
monitoring = false

[node name="Hitbox" parent="Collision" index="2" instance=ExtResource( 6 )]
collision_mask = 4

[node name="AttackZone" parent="Collision" index="3" instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="AttackCooldown" type="Timer" parent="Collision/AttackZone" index="1"]
wait_time = 2.0
one_shot = true

[node name="Death" parent="SFX" index="1"]
stream = ExtResource( 5 )

[node name="Attack" type="AudioStreamPlayer" parent="SFX" index="4"]

[node name="AttackImpact" type="AudioStreamPlayer" parent="SFX" index="5"]

[connection signal="unweak" from="." to="Collision/Hitbox" method="_on_Enemy_unweak"]
[connection signal="weak" from="." to="Collision/Hitbox" method="_on_Enemy_weak"]
[connection signal="path_changed" from="Traits/NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="target_reached" from="Traits/NavigationAgent2D" to="." method="_on_NavigationAgent2D_target_reached"]
[connection signal="body_entered" from="Collision/AttackZone" to="." method="_on_AttackZone_body_entered"]
[connection signal="timeout" from="Collision/AttackZone/AttackCooldown" to="." method="_on_AttackCooldown_timeout"]

[editable path="Collision/SoftCollision"]
[editable path="Collision/Hurtbox"]
[editable path="Collision/Hitbox"]
[editable path="Collision/AttackZone"]
